Add alt tags, noopener and noreferrer tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             gtag('js', new Date());
             gtag('config', 'UA-152639461-1');
         </script>
-        <script src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
+        <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Development and E-Commerce Services for SMEs | Sybiltech</title>       
@@ -21,13 +21,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="preconnect" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg"></a>
+                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -104,19 +104,19 @@
                 <p class="container-700 padding-top center">A selection of clients I have recently worked with:</p>
                 <div class="row">
                     <div class="col-3">                        
-                        <img src="images/clients/Audrey-Zeitoun-Coaching.png">
+                        <img src="images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">
                         <h4>Audrey Zeitoun Coaching</h4>
                     </div>
                     <div class="col-3">                    
-                    <img src="images/clients/KYOSK.png">
+                    <img src="images/clients/KYOSK.png" alt="KYOSK">
                     <h4>KYOSK</h4>
                     </div>
                     <div class="col-3">                       
-                        <img src="images/clients/Pathways-21.png">
+                        <img src="images/clients/Pathways-21.png" alt="Pathways 21">
                         <h4>Pathways 21</h4>
                     </div>
                     <div class="col-3">                    
-                    <img src="images/clients/The-GDPR-Compliance-Consultancy.png">
+                    <img src="images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">
                     <h4>The GDPR Compliance Consultancy</h4>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
-                        <img src="images/shopify_logo_black-300x86.png">                 
+                        <img src="images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
                     </div>
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
@@ -156,7 +156,7 @@
                                   hard worker. I would recommend her to anyone looking for a partner 
                                   to nail your website!</p>
                             <div class="center">
-                                <img src="images/KYOSK_SIGNE_ACCOMPAGNEMENT_800px.png">
+                                <img src="images/KYOSK_SIGNE_ACCOMPAGNEMENT_800px.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
                             <p class="center">CEO, KYOSK</p>
@@ -173,7 +173,7 @@
                                    explanations. I would highly recommend Sybil and her company’s 
                                    services to anyone!</p>
                             <div class="center">
-                                <img src="images/Focus-on-Learning-logo.png">
+                                <img src="images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO, Focus on Learning</p>
@@ -189,7 +189,7 @@
                                 Her work is of a high quality and she is able to work both as part 
                                 of a team and on her own initiative.</p>
                             <div class="center">
-                                <img src="images/favicon-3-150x150.png">
+                                <img src="images/favicon-3-150x150.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
                             <p class="center">Director, Future Communities UK</p>
@@ -204,7 +204,7 @@
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
-                                <img src="images/Audrey-Zeitoun-Coaching.png">
+                                <img src="images/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
                             <p class="center">Life Transitions Coach, Audrey Zeitoun Coaching</p>
@@ -220,17 +220,20 @@
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png">
+                        <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                            alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
                     </div>
                     <div class="col-4">
                     <h4>Yoast Academy Certified</h4>
                     <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
-                        target="_blank">
-                        <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"></a>
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                            alt="Sybil Mayard Yoast for Beginners certificate"></a>
                     </div>
                     <div class="col-4">
                         <h4>Google Analytics Academy Certified</h4>
-                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
+                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
+                            alt="Sybil Mayard Google Analytics for Beginners certificate">
                     </div>
                 </div>
             </div>
@@ -269,18 +272,23 @@
                         <h4>Get in Touch</h4>
                         <p><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></p>
                         <p>
-                            <a href="https://linkedin.com/in-sybil-m" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://facebook.com/sybiltech" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://twitter.com/sybiltech1" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://instagram.com/sybiltech1" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://linkedin.com/in-sybil-m" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://facebook.com/sybiltech" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com/sybiltech1" target="_blank" rel="noopener noreferrer">
+                            </a><i class="fab fa-twitter"></i></a>
+                            <a href="https://instagram.com/sybiltech1" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-instagram"></i></a>
                         </p>
-                        <div><a href="https://fsb.org.uk" target="_blank">
-                            <img src="images/FSB-member-logo-JPEG-oskqhcp342146r0tfzf5r4vhsn7xi9koehpwzeg13e.jpg"></a></div>
-                        <div><a href="https://shopify.co.uk" target="_blank">
-                            <img src="images/shopify-partner-logo.jpg"></a></div>                        
+                        <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
+                            <img src="images/FSB-member-logo-JPEG-oskqhcp342146r0tfzf5r4vhsn7xi9koehpwzeg13e.jpg" 
+                                alt="FSB logo"></a></div>
+                        <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
+                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="images/sybiltech-logo-smallest.jpg">
+                <div class="logo"><img src="images/sybiltech-logo-smallest.jpg" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
