Add dropdown to top nav

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             gtag('js', new Date());
             gtag('config', 'UA-152639461-1');
         </script>
-        <script src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
-        <meta charset="uft-8">
+        <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Development and E-Commerce Services for SMEs | Sybiltech</title>       
         <meta name="Description" content="Sybil Mayard of Sybiltech provides website development and e-commerce 
@@ -21,25 +21,59 @@
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="preconnect stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg"></a>
+                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
         <div class="nav">
-            <div class="container-1000">
-                <div class="menu">
-                    <ul>
-                        <li class="menu-item"><a href="/events">Events</a></li>
-                        <li class="menu-item"><a href="/about">About</a></li>
-                        <li class="menu-item"><a href="/clients">Clients</a></li>
-                        <li class="menu-item"><a href="/blog">Blog</a></li>
-                        <li class="menu-item"><a href="/contact">Contact</a></li>
-                    </ul>
+            <div class="container-1000 center">
+                <div class="topnav" id="myTopnav">
+                    <a href="/">Home</a>                    
+                    <a href="/events">Events</a>
+                    <a href="/shopify">Shopify Course</a>                   
+                    <div class="dropdown">
+                        <button class="dropbtn">About
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="/about">About</a>
+                          <a href="/clients">Clients</a>
+                          <a href="/services">Services</a>
+                          <a href="/faqs">FAQs</a>
+                        </div>
+                    </div>                    
+                    <div class="dropdown">
+                        <button class="dropbtn">Projects
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="/vidcareer">VidCareer</a>
+                          <a href="/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                          <a href="/tagnav">TagNav</a>
+                          <a href="/my-personal-portfolio">My Personal Portfolio</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">Blog
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                          <a href="/webtip-wednesday-series-lauched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                          <a href="/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                          <a href="/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                        </div>
+                    </div>
+                    <a href="/contact">Contact</a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -76,7 +110,7 @@
                     </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="/services">All Services</a>   
+                    <a class="btn-primary" href="/services">View Services</a>   
                 </div>
             </div>
         </div>
@@ -87,24 +121,24 @@
                 <p class="container-700 padding-top center">A selection of clients I have recently worked with:</p>
                 <div class="row">
                     <div class="col-3">                        
-                        <img src="images/clients/Audrey-Zeitoun-Coaching.png">
+                        <img src="images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">
                         <h4>Audrey Zeitoun Coaching</h4>
                     </div>
                     <div class="col-3">                    
-                    <img src="images/clients/KYOSK.png">
+                    <img src="images/clients/KYOSK.png" alt="KYOSK">
                     <h4>KYOSK</h4>
                     </div>
                     <div class="col-3">                       
-                        <img src="images/clients/Pathways-21.png">
+                        <img src="images/clients/Pathways-21.png" alt="Pathways 21">
                         <h4>Pathways 21</h4>
                     </div>
                     <div class="col-3">                    
-                    <img src="images/clients/The-GDPR-Compliance-Consultancy.png">
+                    <img src="images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">
                     <h4>The GDPR Compliance Consultancy</h4>
                     </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="/clients">All Clients</a>   
+                    <a class="btn-primary" href="/clients">View Clients</a>   
                 </div>
             </div>
         </div>
@@ -114,7 +148,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
-                        <img src="images/shopify_logo_black-300x86.png">                 
+                        <img src="images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
                     </div>
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
@@ -139,7 +173,7 @@
                                   hard worker. I would recommend her to anyone looking for a partner 
                                   to nail your website!</p>
                             <div class="center">
-                                <img src="images/KYOSK_SIGNE_ACCOMPAGNEMENT_800px.png">
+                                <img src="images/KYOSK-Logo.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
                             <p class="center">CEO, KYOSK</p>
@@ -156,7 +190,7 @@
                                    explanations. I would highly recommend Sybil and her company’s 
                                    services to anyone!</p>
                             <div class="center">
-                                <img src="images/Focus-on-Learning-logo.png">
+                                <img src="images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO, Focus on Learning</p>
@@ -172,7 +206,7 @@
                                 Her work is of a high quality and she is able to work both as part 
                                 of a team and on her own initiative.</p>
                             <div class="center">
-                                <img src="images/favicon-3-150x150.png">
+                                <img src="images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
                             <p class="center">Director, Future Communities UK</p>
@@ -187,7 +221,7 @@
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
-                                <img src="images/Audrey-Zeitoun-Coaching.png">
+                                <img src="images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
                             <p class="center">Life Transitions Coach, Audrey Zeitoun Coaching</p>
@@ -203,17 +237,20 @@
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png">
+                        <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                            alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
                     </div>
                     <div class="col-4">
                     <h4>Yoast Academy Certified</h4>
                     <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
-                        target="_blank">
-                        <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"></a>
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                            alt="Sybil Mayard Yoast for Beginners certificate"></a>
                     </div>
                     <div class="col-4">
                         <h4>Google Analytics Academy Certified</h4>
-                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
+                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
+                            alt="Sybil Mayard Google Analytics for Beginners certificate">
                     </div>
                 </div>
             </div>
@@ -252,18 +289,23 @@
                         <h4>Get in Touch</h4>
                         <p><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></p>
                         <p>
-                            <a href="https://linkedin.com/in-sybil-m" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://facebook.com/sybiltech" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://twitter.com/sybiltech1" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://instagram.com/sybiltech1" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://linkedin.com/in-sybil-m" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://facebook.com/sybiltech" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com/sybiltech1" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i></a>
+                            <a href="https://instagram.com/sybiltech1" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-instagram"></i></a>
                         </p>
-                        <div><a href="https://fsb.org.uk" target="_blank">
-                            <img src="images/FSB-member-logo-JPEG-oskqhcp342146r0tfzf5r4vhsn7xi9koehpwzeg13e.jpg"></a></div>
-                        <div><a href="https://shopify.co.uk" target="_blank">
-                            <img src="images/shopify-partner-logo.jpg"></a></div>                        
+                        <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
+                            <img src="images/FSB-member-logo.jpg" 
+                                alt="FSB logo"></a></div>
+                        <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
+                            <img src="images/shopify-partner-logo.jpg" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="images/sybiltech-logo-smallest.jpg">
+                <div class="logo"><img src="images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
@@ -272,5 +314,15 @@
             <script>
                 document.write(new Date().getFullYear())
             </script> Sybiltech | Website developed by <a href="/">Sybiltech</a></p></div>
+        <script>
+            function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+            }
+        </script>
     </body>
 </html>
